Tue Apr  5 14:13:10 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Config_Handlers/Any_Handler.cpp

	Incorporated a fix to the Any handler from Gary Duzan.
	
Tue Apr  5 11:34:32 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
	* DAnCE/Config_Handlers/Deployment.cpp
	* DAnCE/Config_Handlers/Deployment.hpp
	* DAnCE/Config_Handlers/ccd.cpp
	* DAnCE/Config_Handlers/ccd.hpp
	* DAnCE/Config_Handlers/cdd.cpp
	* DAnCE/Config_Handlers/cdd.hpp
	* DAnCE/Config_Handlers/cdp.cpp
	* DAnCE/Config_Handlers/cdp.hpp
	* DAnCE/Config_Handlers/cid.cpp
	* DAnCE/Config_Handlers/cid.hpp
	* DAnCE/Config_Handlers/cpd.cpp
	* DAnCE/Config_Handlers/cpd.hpp
	* DAnCE/Config_Handlers/iad.cpp
	* DAnCE/Config_Handlers/iad.hpp
	* DAnCE/Config_Handlers/pcd.cpp
	* DAnCE/Config_Handlers/pcd.hpp
	* DAnCE/Config_Handlers/toplevel.cpp
	* DAnCE/Config_Handlers/toplevel.hpp
	* DAnCE/Config_Handlers/XMLSchema/Types.hpp
	
	New version of the generated XSC handlers fixing the following problems:
	  - Use ACE_TCHAR instead of char as the character type
	  - Export macros for the generated classes.
	  - Borland 6 support
	  - Misc VC6 warnings.
	  
Sun Apr  3 23:52:50 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* examples/BasicSP/descriptors/flattern_deploymentplan.cdp

	Fixed a mistake in the descriptor.	

Sun Apr  3 18:08:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Container_Base.h:
        * ciao/ServerActivator_Impl.h:
          Added missing include of ace/Hash_Map_Manager_T.h

Sat Apr 02 13:12:40 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/examples/BasicSP/README.html: Brought the documentation a
	  bit more up-to-date.

Sat Apr  2 13:06:02 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/ciao/Container_Base.cpp: Added more debug print out
	  statements in install_home method.
